--- a/src/app.html
+++ b/src/app.html
@@ -15,8 +15,8 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
+<body data-sveltekit-preload-data="hover" class="bg-slate-950 text-white relative">
+	<div style="display: contents" class="relative z-[-1]">%sveltekit.body%</div>
 </body>
 
 </html>
