--- a/src/app.html
+++ b/src/app.html
@@ -18,6 +18,9 @@
 
 <body data-sveltekit-preload-data="hover" class="bg-slate-950 text-white relative">
 	<div style="display: contents" class="relative z-[-1]">%sveltekit.body%</div>
-</body>
+	<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
+		<div class="absolute inset-0"></div>
+	</div>
+	</body>
 
 </html>
