--- a/src/app.html
+++ b/src/app.html
@@ -19,8 +19,11 @@
 <body data-sveltekit-preload-data="hover" class="bg-slate-950 text-white relative">
 	<div style="display: contents" class="relative z-[-1]">%sveltekit.body%</div>
 	<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
-		<div class="absolute inset-0"></div>
+		<div class="absolute inset-0" id="particles-js"></div>
 	</div>
-	</body>
+	<script>
+		
+	</script>
+</body>
 
 </html>
