--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,9 @@
 
 <head>
 	<meta charset="utf-8" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js" integrity="sha512-jq8sZI0I9Og0nnZ+CfJRnUzNSDKxr/5Bvha5bn7AHzTnRyxUfpUArMzfH++mwE/hb2efOo1gCAgI+1RMzf8F7g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"
+	integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
+	crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +24,9 @@
 		<div class="absolute inset-0" id="particles-js"></div>
 	</div>
 	<script>
-		
+		particleJS.load('particles-js', 'assets/particles.json', function() {
+			console.log('Callback - particles.js config loaded')
+		})
 	</script>
 </body>
 
