--- a/src/app.html
+++ b/src/app.html
@@ -1,32 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
 	<meta charset="utf-8" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"
-	integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
-	crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"
+		integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-		integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 </head>
 
 <body data-sveltekit-preload-data="hover" class="bg-slate-950 text-white relative">
-	<div style="display: contents" class="relative z-[-1]">%sveltekit.body%</div>
+	<div style="display: contents" class="relative z-[1]">%sveltekit.body%</div>
+
 	<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
-		<div class="absolute inset-0" id="particles-js"></div>
+		<div id="particles-js" class="absolute inset-0" />
 	</div>
 	<script>
-		particleJS.load('particles-js', 'assets/particles.json', function() {
-			console.log('Callback - particles.js config loaded')
-		})
+		particlesJS.load("particles-js", "assets/particles.json", function () {
+			console.log("callback - particles.js config loaded");
+		});
 	</script>
 </body>
 
